--- a/example.env
+++ b/example.env
@@ -4,5 +4,5 @@ NODE_ENV=
 CLOUD_NAME=
 CLOUD_API_KEY=
 CLOUD_API_SECRET=
-GMAIL_USER=
-GMAIL_APP_PASSWORD=
+SENDGRID_API_KEY=
+SENDGRID_SENDER_EMAIL=
